--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <style media="screen">
+            * {
+                margin: 0;
+                padding: 0;
+            }
+        </style>
+    </head>
+    <body>
+    </body>
+    <script type="text/javascript">
+        window.location.href="https://www.cnblogs.com/kaydenlsr/";　 // 将这个地址修改成需要的博客地址
+    </script>
+</html>
