--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <body>
     </body>
     <script type="text/javascript">
-        window.location.href="https://www.cnblogs.com/kaydenlsr/";　 // 将这个地址修改成需要的博客地址
+        window.location.href="kaydenlsr.cnblogs.com";
     </script>
 </html>
