--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <body>
     </body>
     <script type="text/javascript">
-        window.location.href="kaydenlsr.cnblogs.com";
+        window.location.href="https://www.cnblogs.com/kaydenlsr/";
     </script>
 </html>
